# Test_Repo

./: .buildinfo  .gitignore  MANIFEST.in  README.md  a_test_pkg.hello_world.html  a_test_pkg.hello_world2.html  a_test_pkg.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: a_test_pkg.doctree  a_test_pkg.hello_world.doctree  a_test_pkg.hello_world2.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: main.yml  pages.yml  python-publish.yml
_sources/: a_test_pkg.hello_world.rst.txt  a_test_pkg.hello_world2.rst.txt  a_test_pkg.rst.txt  index.rst.txt  modules.rst.txt
a_test_pkg/: ABOUT  __init__.py  hello_world.py  hello_world2.py
docs/: conf.py
tests/: test_hello-world2.py
