[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a_test_pkg"
version = "0.1.0"
description = "A simple example package for demonstration purposes."
readme = "README.md"  # Ensure you have a README.md file in your project
requires-python = ">=3.11"  # Specify the Python version required
authors = [
    { name = "Your Name", email = "you@example.com" }  # Replace with your name and email
]
license = { text = "MIT" }  # Specify the license type
keywords = ["example", "package", "tutorial"]  # Keywords for package search
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "wheel",
]
